Fixed overflow

--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,7 @@ strong {
   position: relative;
   width: var(--wrapper-width);
   height: 100%;
+  overflow: hidden;
 }
 
 .hero,
